--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.18",
+    "superagent": "^5.2.2",
     "supergoose": "^0.2.6"
+  },
+  "devDependencies": {
+    "eslint": "^7.2.0"
   }
 }
