--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --coverage --verbose",
+    "lint": "eslint '**/*.js'",
     "start": "node index.js"
   },
   "repository": {
@@ -30,6 +31,7 @@
     "supergoose": "^0.2.6"
   },
   "devDependencies": {
-    "eslint": "^7.2.0"
+    "eslint": "^7.2.0",
+    "jest": "^26.0.1"
   }
 }
